✨ feat(Core): 完善基础验证配置

--- a/src/i18n/cn/common.json
+++ b/src/i18n/cn/common.json
@@ -1,3 +1,9 @@
 {
-	"100500": "服务器开小差了"
+	"100200": "登录成功",
+	"100201": "注册成功",
+	"100500": "服务器开小差了",
+
+	"NOT_EXIST": "{name}不存在",
+	"NOT_CLOSE": "{name}已关闭",
+	"NOT_DELETE": "{name}已删除"
 }
