--- a/src/i18n/en/http.json
+++ b/src/i18n/en/http.json
@@ -1,5 +1,8 @@
 {
-	"HTTP_NOTICE_CREATE": "created successfully",
-	"HTTP_NOTICE_UPDATE": "edited successfully",
-	"HTTP_NOTICE_DELETE": "deleted successfully"
+	"HTTP_CREATE_SUCCESS": "created successfully",
+	"HTTP_UPDATE_SUCCESS": "edited successfully",
+	"HTTP_DELETE_SUCCESS": "deleted successfully",
+	"HTTP_SERVICE_FAIL": "The server is down",
+	"HTTP_LOGIN_SUCCESS": "login successfully",
+	"HTTP_REGISTER_SUCCESS": "registered successfully"
 }
