--- a/src/i18n/cn/http.json
+++ b/src/i18n/cn/http.json
@@ -2,7 +2,5 @@
 	"HTTP_CREATE_SUCCESS": "创建成功",
 	"HTTP_UPDATE_SUCCESS": "编辑成功",
 	"HTTP_DELETE_SUCCESS": "删除成功",
-	"HTTP_SERVICE_FAIL": "服务器开小差了",
-	"HTTP_LOGIN_SUCCESS": "登录成功",
-	"HTTP_REGISTER_SUCCESS": "注册成功"
+	"HTTP_SERVICE_ERROR": "服务器开小差了"
 }
