--- a/src/i18n/cn/user.json
+++ b/src/i18n/cn/user.json
@@ -1,6 +1,8 @@
 {
-	"101000": "验证码错误",
-	"101001": "手机号已注册",
-	"101002": "密码错误",
-	"101003": "账号"
+	"USER_LOGIN_SUCCESS": "登录成功",
+	"USER_REGISTER_SUCCESS": "注册成功",
+	"USER_CAPTCHA_ERROR": "验证码错误",
+	"USER_ACCOUNT": "账号",
+	"USER_PASSWORD_ERROR": "密码错误",
+	"USER_MOBILE_EXIST": "手机号已注册"
 }
