--- a/src/i18n/en/user.json
+++ b/src/i18n/en/user.json
@@ -1,6 +1,8 @@
 {
-	"101000": "Verification code error",
-	"101001": "Mobile number is registered",
-	"101002": "Wrong password",
-	"101003": "Account"
+	"USER_LOGIN_SUCCESS": "登录成功",
+	"USER_REGISTER_SUCCESS": "注册成功",
+	"USER_CAPTCHA_ERROR": "验证码错误",
+	"USER_ACCOUNT": "账号",
+	"USER_PASSWORD_ERROR": "密码错误",
+	"USER_MOBILE_EXIST": "手机号已注册"
 }
