--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -1,15 +1,11 @@
 {
-	"100200": "login successful",
-	"100201": "registration success",
-	"100500": "The server is down",
-
 	"HAS_EXITTED_MERGE": "{name} existed",
 	"NOT_EXIST_MERGE": "{name} does not exist",
 	"NOT_CLOSE_MERGE": "{name} closed",
 	"NOT_DELETE_MERGE": "{name} deleted",
 	"NOT_ENABLE_MERGE": "{name} enabled",
 	"NOT_DISABLE_MERGE": "{name} disabled",
-	"NOTICE_CREATE": "created successfully",
-	"NOTICE_UPDATE": "edited successfully",
-	"NOTICE_DELETE": "deleted successfully"
+	"comment": {
+		"value": "备注"
+	}
 }
