--- a/src/i18n/en/user.json
+++ b/src/i18n/en/user.json
@@ -1,8 +1,35 @@
 {
-	"USER_LOGIN_SUCCESS": "登录成功",
-	"USER_REGISTER_SUCCESS": "注册成功",
-	"USER_CAPTCHA_ERROR": "验证码错误",
-	"USER_ACCOUNT": "账号",
-	"USER_PASSWORD_ERROR": "密码错误",
-	"USER_MOBILE_EXIST": "手机号已注册"
+	"name": "账号",
+	"notice": {
+		"LOGIN_NOT": "账号未登录",
+		"LOGIN_SUCCESS": "登录成功",
+		"REGISTER_SUCCESS": "注册成功"
+	},
+	"nickname": {
+		"value": "昵称"
+	},
+	"email": {
+		"value": "邮箱"
+	},
+	"avatar": {
+		"value": "头像"
+	},
+	"openid": {
+		"value": "OpenID"
+	},
+	"mobile": {
+		"value": "手机号",
+		"required": "手机号 必填",
+		"register": "手机号已注册"
+	},
+	"password": {
+		"value": "密码",
+		"required": "密码 必填",
+		"error": "密码错误"
+	},
+	"code": {
+		"value": "验证码",
+		"required": "验证码 必填",
+		"error": "验证码错误"
+	}
 }
