--- a/src/i18n/en/user.json
+++ b/src/i18n/en/user.json
@@ -1,7 +1,7 @@
 {
 	"name": "账号",
 	"notice": {
-		"LOGIN_NOT": "账号未登录",
+		"LOGIN_NOT": "not logged in",
 		"LOGIN_SUCCESS": "登录成功",
 		"REGISTER_SUCCESS": "注册成功"
 	},
