--- a/src/i18n/en/http.json
+++ b/src/i18n/en/http.json
@@ -2,5 +2,12 @@
 	"CREATE_SUCCESS": "创建成功",
 	"UPDATE_SUCCESS": "编辑成功",
 	"DELETE_SUCCESS": "删除成功",
-	"SERVICE_ERROR": "服务器开小差了"
+	"SERVICE_ERROR": "服务器开小差了",
+	"NOT_HAS": "{name} existed",
+	"NOT_DONE": "{name} does not exist",
+	"NOT_CLOSE": "{name} closed",
+	"NOT_DELETE": "{name} deleted",
+	"NOT_ENABLE": "{name} enabled",
+	"NOT_DISABLE": "{name} disabled",
+	"NOT_ISSUE": "{name} does not exist or is disabled"
 }
